Adding rvirding/rb via subtree merge

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,4 @@
 
-{erl_opts, [{src_dirs, ["src", "rb/src"]}]}.
+{erl_opts, [warn_missing_spec,
+            warnings_as_errors,
+            {src_dirs, ["src", "rb/src"]}]}.
