remove rvirding/rb as it screws up code coverage stats :)

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,3 @@
 
 {erl_opts, [warn_missing_spec,
-            warnings_as_errors,
-            {src_dirs, ["src", "rb/src"]}]}.
+            warnings_as_errors]}.
