--- a/test.config
+++ b/test.config
@@ -4,9 +4,14 @@
     {proper, "1.0", 
         {git, "http://github.com/manopapad/proper.git", "master"}},
     {hamcrest, ".*",
-        {git, "https://github.com/hyperthunk/hamcrest-erlang.git"}}
+        {git, "https://github.com/hyperthunk/hamcrest-erlang.git"}},
+    {rebar_qc_plugin, ".*",
+        {git, "git://github.com/hyperthunk/rebar_qc_plugin.git"}}
 ]}.
 
+{plugins, [rebar_qc_plugin]}.
+{qc_check_specs, [".*"]}.
+{qc_spec_opts, [long_result, {numtests, 100}]}.
 {qc_opts, [long_result, {numtests, 500}]}.
 
 {cover_enabled, true}.
