tighten up test cases - improve build config

--- a/test.config
+++ b/test.config
@@ -1,18 +1,43 @@
 
 {extend, "rebar.config"}.
-{deps, [
-    {proper, "1.0", 
-        {git, "http://github.com/manopapad/proper.git", "master"}},
-    {hamcrest, ".*",
-        {git, "https://github.com/hyperthunk/hamcrest-erlang.git"}},
-    {rebar_qc_plugin, ".*",
-        {git, "git://github.com/hyperthunk/rebar_qc_plugin.git"}}
-]}.
 
-{plugins, [rebar_qc_plugin]}.
+%% qc config
 {qc_check_specs, [".*"]}.
 {qc_spec_opts, [long_result, {numtests, 100}]}.
 {qc_opts, [long_result, {numtests, 500}]}.
 
+%% coverage reports
 {cover_enabled, true}.
 {cover_print_enabled, true}.
+
+%% do *not* run tests in deps
+{skip_dep_cmds, [test, eunit, qc, ct]}.
+
+%% generate a test phase
+{phases, [
+    {test, compile, [eunit, qc]}
+]}.
+
+%% plugins
+{plugins, [rebar_plugin_manager,
+           rebar_skip_deps,
+           rebar_phase_plugin,
+           rebar_qc_plugin]}.
+
+%% NB: this setting is required in order to get the plugins to work properly
+{plugin_dir, "deps/rebar_plugin_manager/src"}.
+
+%% dependencies
+{deps, [
+    {proper, "1.0",
+        {git, "http://github.com/manopapad/proper.git", "master"}},
+    {hamcrest, ".*",
+        {git, "https://github.com/hyperthunk/hamcrest-erlang.git"}},
+    {rebar_qc_plugin, ".*",
+        {git, "git://github.com/hyperthunk/rebar_qc_plugin.git"}},
+    {rebar_skip_deps, ".*",
+        {git, "git://github.com/hyperthunk/rebar_skip_deps.git"}},
+    {rebar_phase_plugin, ".*",
+        {git, "git://github.com/hyperthunk/rebar_phase_plugin.git"}}
+]}.
+
