--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,8 @@
 
 {erl_opts, [warn_missing_spec,
             warnings_as_errors]}.
+
+{deps, [
+    {build_config, ".*",
+        {git, "https://github.com/nebularis/build_config.git"}}
+]}.
