Add extra build targets

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: erlang
 otp_release:
-   - R14B03
-before_script: "./rebar get-deps compile"
+   - R14B01
+   - R14B04
+before_script: "./rebar -C test.config get-deps compile"
 script: "./rebar -C test.config test -v"
