rework the build to ignore non-OTP packaging in deps

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,16 @@
 
-{erl_opts, [warn_missing_spec,
-            warnings_as_errors]}.
+{extend, "init.config"}.
+{extend, "deps/build_config/base.config"}.
+{alien_dirs, ["deps/rb"]}.
+{plugins, [rebar_alien_plugin]}.
 
 {deps, [
-    {build_config, ".*",
-        {git, "https://github.com/nebularis/build_config.git"}}
+    {rb, ".*",
+        {git, "https://github.com/rvirding/rb.git"}},
+    {pqueue, ".*",
+        {git, "https://github.com/okeuday/pqueue.git"}},
+    {trie, ".*",
+        {git, "https://github.com/okeuday/trie.git"}}
+%    {skewbinheap, ".*",
+%        {git, "https://github.com/okeuday/skewbinheap.git"}}
 ]}.
