--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: erlang
 otp_release:
    - R14B01
    - R14B04
-before_script: "./rebar -C test.config get-deps compile"
-script: "./rebar -C test.config test -v"
+before_script: "rebar -C init.config get-deps compile"
+script: "./rebar -C test.config get-deps compile test -v"
