Fix build so that travis doesn't break when running with default rebar exe

--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,23 @@
 
 {extend, "init.config"}.
 {extend, "deps/build_config/base.config"}.
-{alien_dirs, ["deps/rb"]}.
-{plugins, [rebar_alien_plugin]}.
+{extend, "deps/build_config/dependencies.config"}.
+
+{plugins, [rebar_alt_deps]}.
 
 {deps, [
-    {rb, ".*",
-        {git, "https://github.com/rvirding/rb.git"}},
+    {rebar_alt_deps, ".*",
+        {git, "git://github.com/hyperthunk/rebar_alt_deps.git"}},
     {pqueue, ".*",
         {git, "https://github.com/okeuday/pqueue.git"}},
     {trie, ".*",
         {git, "https://github.com/okeuday/trie.git"}}
 %    {skewbinheap, ".*",
 %        {git, "https://github.com/okeuday/skewbinheap.git"}}
+]}.
+
+%% rb isn't packaged as an OTP application, so 'get-deps' won't work...
+{alt_deps, [{rb, ".*"}]}.
+{alt_repositories, [
+    {rb, {github, "rvirding", "develop"}}
 ]}.
